tools/tests/errors/surf_type_05.ki
# type/operator: an Integer is not callable
var n = 5
discard n()
